# $Id$
#
# add here your config files
#

EXTRA_DIST = exampleconfigs.xml msx1.xml cbios-msx1.xml cbios-msx2.xml settings.xml National_CF-1200.xml National_CF-2000.xml National_CF-2700.xml National_CF-3000.xml National_CF-3300.xml National_FS-1300.xml National_FS-4000.xml National_FS-4500.xml National_FS-4600.xml National_FS-4700.xml National_FS-5000.xml National_FS-5500F1.xml National_FS-5500F1.xml Panasonic_FS-A1.xml Panasonic_FS-A1F.xml Panasonic_FS-A1FM.xml Panasonic_FS-A1FX.xml Panasonic_FS-A1GT.xml Panasonic_FS-A1MK2.xml Panasonic_FS-A1ST.xml Panasonic_FS-A1WSX.xml Panasonic_FS-A1WX.xml Philips_NMS_8250.xml Sanyo_PHC-35J.xml Sanyo_PHC-70FD.xml Sanyo_PHC-70FD2.xml

MAINTAINERCLEANFILES = Makefile.in
