lib_LTLIBRARIES = libxmlx.la
libxmlx_la_SOURCES = libxmlx.cc libxmlx.hh system.h aclocal.m4

#  uncomment the following if libxmlx requires the math library
#libxmlx_LDADD=-lm

LIBS=@XML_LIBS@

#EXTRA_DIST=libxmlx.lsm.in #NAME.texinfo libxmlx.spec.in

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
#info_TEXINFOS = libxmlx.texinfo
#libxmlx_TEXINFOS = gpl.texinfo

#  install the man pages
#man_MANS=libxmlx.1
